# Commitfolio

./: .gitignore  AGENTS.md  DESIGN.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.omx/plans/: prd-result-quality-polish.md  test-spec-result-quality-polish.md
apps/backend/: .env.example  README.md  alembic.ini  pyproject.toml
apps/backend/app/: __init__.py  config.py  db.py  github_oauth.py  main.py  models.py  observability.py
apps/backend/app/api/: dependencies.py  responses.py  schemas.py
apps/backend/app/api/routes/: analysis_events.py  analysis_jobs.py  auth.py  repositories.py  results.py
apps/backend/app/repositories/: analysis_jobs.py  results.py
apps/backend/app/services/: analysis_events.py  analysis_jobs.py  result_draft.py  result_enhancement.py  results.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 20260415_0001_analysis_jobs.py  20260415_0002_evidence_events.py  20260415_0003_portfolio_results.py  20260416_0004_result_enhancement.py
apps/backend/tests/: test_auth.py  test_result_generation.py
apps/frontend/: index.html  package-lock.json  package.json
docs/architecture/: api-contract.md  backend-code-architecture.md  domain-model.md  frontend-code-architecture.md  system-overview.md
docs/playbooks/: default-feature-flow.md  feature-delivery.md  github-issue-first-flow.md  omx-harness-audit.md  omx-runtime-bringup.md  operator-deployment-actions.md  verification-baseline.md
docs/prd/: _template.md  analysis-job-bootstrap.md  analysis-progress-sse.md  (+19 more)
(+55 files in other folders)
