[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "commitfolio-backend"
version = "0.1.0"
description = "Commitfolio FastAPI backend bootstrap"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<0.116",
  "httpx>=0.28,<0.29",
  "itsdangerous>=2.2,<2.3",
  "uvicorn>=0.34,<0.35"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<8.4",
  "pytest-asyncio>=0.26,<0.27"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
